force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Status_History__c/agf__ADM_Status_History__c.object-meta.xml
<CustomObject>
    <label>ADM_Status_History</label>
    <nameField>
        <label>ADM_Status_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADM_Status_Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>