force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Status_History__c/fields/agf__Assignee__c.field-meta.xml
<CustomField>
    <fullName>agf__Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ADM_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>