force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Status_History__c/fields/agf__Processed__c.field-meta.xml
<CustomField>
    <fullName>agf__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>