force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Status_History__c/fields/agf__Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled_Build</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>ADM_Status_Histories</relationshipLabel>
    <relationshipName>ADM_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>