force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Status_History__c/fields/agf__Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Status__c</fullName>
    <label>Status</label>
    <length>55</length>
    <type>Text</type>
</CustomField>