force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Status_History__c/fields/agf__Work_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Work_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work ID</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>ADM_Status_Histories</relationshipLabel>
    <relationshipName>ADM_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>